# cvsolitaire

./: Cargo.toml  LICENSE  README.md  emcc_sdl
.cargo/: config
assets/: about.txt  rules.txt
src/: board.rs  error.rs  gamemove.rs  graphics.rs  main.rs
